--- a/white-plus/style.css
+++ b/white-plus/style.css
@@ -247,7 +247,7 @@ body {
     color: #fff;
     border: none;
     border-radius: 8px;
-    padding: 13px 0;
+    padding: 13px 50;
     font-size: 1.13rem;
     cursor: pointer;
     margin-top: 18px;
@@ -255,6 +255,7 @@ body {
     width: 100%;
     font-weight: 600;
     box-shadow: 0 2px 12px rgba(124, 58, 237, 0.10);
+    text-decoration: none;
 }
 .botao-plano:hover {
     filter: brightness(1.1);
