--- a/white-plus/style.css
+++ b/white-plus/style.css
@@ -247,7 +247,7 @@ body {
     color: #fff;
     border: none;
     border-radius: 8px;
-    padding: 10px 50;
+    padding: 10px 50px;
     font-size: 1.13rem;
     cursor: pointer;
     margin-top: 18px;
